fix: overflow details project card

--- a/src/app-components/ProjectCard/style.css
+++ b/src/app-components/ProjectCard/style.css
@@ -64,3 +64,13 @@
     height: var(--spacing-40);
   }
 }
+
+@media (max-width: 375px) {
+  .project-card .description {
+    overflow: hidden;
+    display: -webkit-box;
+    -webkit-line-clamp: 10;
+    line-clamp: 10;
+    -webkit-box-orient: vertical;
+  }
+}
